Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,11 +35,20 @@
 <p>This README outlines the details of collaborating on this Ember addon.</p>
 
 <h2>
+<a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Documentation</h2>
+
+<ul>
+<li>visit <code>wiki</code> pages at this <a href="https://github.com/bobisjan/ember-format/wiki">repository</a>
+</li>
+</ul>
+
+<h2>
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h2>
 
 <ul>
 <li>
-<code>git clone</code> this repository</li>
+<code>git clone</code> this <a href="https://github.com/bobisjan/ember-format">repository</a>
+</li>
 <li><code>npm install</code></li>
 <li><code>bower install</code></li>
 </ul>
