Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <a id="ember-format-" class="anchor" href="#ember-format-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Ember Format <a href="https://travis-ci.org/bobisjan/ember-format"><img src="https://travis-ci.org/bobisjan/ember-format.svg?branch=master" alt="Build Status"></a>
 </h1>
 
-<p>This README outlines the details of collaborating on this Ember addon.</p>
+<p>An add-on for i18n and l10n of the Ember applications.</p>
 
 <h2>
 <a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Documentation</h2>
