Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -43,40 +43,12 @@
 </ul>
 
 <h2>
-<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h2>
+<a id="contribution" class="anchor" href="#contribution" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contribution</h2>
 
 <ul>
-<li>
-<code>git clone</code> this <a href="https://github.com/bobisjan/ember-format">repository</a>
+<li>visit <a href="https://github.com/bobisjan/ember-format/blob/master/CONTRIBUTING.md"><code>CONTRIBUTING.md</code></a>
 </li>
-<li><code>npm install</code></li>
-<li><code>bower install</code></li>
 </ul>
-
-<h2>
-<a id="running" class="anchor" href="#running" aria-hidden="true"><span class="octicon octicon-link"></span></a>Running</h2>
-
-<ul>
-<li><code>ember serve</code></li>
-<li>visit <code>dummy</code> application at http://localhost:4200</li>
-</ul>
-
-<h2>
-<a id="running-tests" class="anchor" href="#running-tests" aria-hidden="true"><span class="octicon octicon-link"></span></a>Running Tests</h2>
-
-<ul>
-<li><code>ember test</code></li>
-<li><code>ember test --server</code></li>
-</ul>
-
-<h2>
-<a id="building" class="anchor" href="#building" aria-hidden="true"><span class="octicon octicon-link"></span></a>Building</h2>
-
-<ul>
-<li><code>ember build</code></li>
-</ul>
-
-<p>For more information on using <code>ember-cli</code>, visit <a href="http://www.ember-cli.com/">http://www.ember-cli.com/</a>.</p>
 
 <h2>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h2>
