--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <a id="contribution" class="anchor" href="#contribution" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contribution</h2>
 
 <ul>
-<li>visit <a href="https://github.com/bobisjan/ember-format/blob/master/CONTRIBUTING.md"><code>CONTRIBUTING.md</code></a>
+<li>visit <a href="https://github.com/bobisjan/ember-format/blob/master/CONTRIBUTING.md">CONTRIBUTING.md</a>
 </li>
 </ul>
 
