Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </header>
       <section>
         <h1>
-<a id="ember-format-" class="anchor" href="#ember-format-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Ember Format <a href="https://travis-ci.org/bobisjan/ember-format"><img src="https://travis-ci.org/bobisjan/ember-format.svg?branch=master" alt="Build Status"></a>
+<a id="ember-format--" class="anchor" href="#ember-format--" aria-hidden="true"><span class="octicon octicon-link"></span></a>Ember Format <a href="https://travis-ci.org/bobisjan/ember-format"><img src="https://travis-ci.org/bobisjan/ember-format.svg?branch=master" alt="Build Status"></a> <a href="http://badge.fury.io/js/ember-format"><img src="https://badge.fury.io/js/ember-format.svg" alt="npm version"></a>
 </h1>
 
 <p><strong>[WIP] Ember Format requires Ember 1.10.0 (in beta)</strong></p>
@@ -105,6 +105,16 @@ APP<span class="pl-k">:</span> {
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-46690883-2");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
